--- a/ProfiledAi.csproj
+++ b/ProfiledAi.csproj
@@ -21,7 +21,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Services\" />
+      <Folder Include="Models\CacheModel\" />
     </ItemGroup>
 
 </Project>
